# advent21

./: .gitignore  Cargo.toml  pyproject.toml
src/: day1.rs  day10.lark  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day19_matrices.txt  day2.rs  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.rs  day4.rs  day5.rs  day6.py  day7.py  day8.py  day9.py  main.rs  read.rs
